--- a/code/parts/apps/list.html
+++ b/code/parts/apps/list.html
@@ -97,8 +97,8 @@
                 <span class="sortorder" ng-show="filter.predicate === 'app_platform'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th class="thin">
-                <a href="" ng-click="order('app_published_version')">Version</a>
-                <span class="sortorder" ng-show="filter.predicate === 'app_published_version'" ng-class="{reverse: filter.reverse}"></span>
+                <a href="" ng-click="order('last_app_published_version')">Version</a>
+                <span class="sortorder" ng-show="filter.predicate === 'last_app_published_version'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th>
                 <a href="" ng-click="order('updated_at')">Last updated at</a>
