--- a/code/dev/parts/reports/mobile-traffic.html
+++ b/code/dev/parts/reports/mobile-traffic.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="margin-top: -40px;">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
       <h2>Traffic Levels</h2>
