--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
-      Add new Domain
+      Add New Domain
     </h2>
   </div>
 </div>
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="pull-left">
-              <a ui-sref="{{state}}"
+              <a ui-sref="^"
                  ng-disabled="_loading"
                  class="btn btn-info">
                 <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
@@ -26,26 +26,27 @@
 
       </div>
       <div class="panel-body">
-        <form class="form-horizontal">
+        <form class="form-horizontal" ng-submit="createDomain(model)">
           <div class="form-group">
-            <label for="name"
+            <label for="domain_name"
                    popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="Enter here a website/API domain name to be served by RevAPM"
-                   >Domain name</label>
+                   >Domain Name</label>
 
             <div class="col-sm-10">
               <input type="text"
+                     autofocus
                      class="form-control"
                      ng-disabled="_loading"
-                     ng-model="model.name"
-                     id="name"
-                     placeholder="Domain name">
+                     ng-model="model.domain_name"
+                     id="domain_name"
+                     placeholder="Domain Name">
             </div>
           </div>
           <div class="form-group" ng-if="companies.length > 1">
-            <label for="companyId"
+            <label for="account_id"
                    popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
@@ -54,10 +55,10 @@
             <div class="col-sm-10">
               <select class="form-control"
                       ng-disabled="_loading"
-                      ng-model="model.companyId"
-                      id="companyId"
+                      ng-model="model.account_id"
+                      id="account_id"
                       ng-options="obj.id as obj.companyName for obj in companies">
-                <option value="">--- Select company ---</option>
+                <option value="">--- Select Company ---</option>
               </select>
             </div>
           </div>
@@ -94,7 +95,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="origin_server_location"
+            <label for="origin_server_location_id"
                    popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
@@ -103,13 +104,14 @@
             <div class="col-sm-10">
               <select class="form-control"
                       ng-disabled="_loading"
-                      ng-model="model.origin_server_location"
-                      id="origin_server_location"
-                      ng-options="obj.locationName as obj.locationName for obj in locations">
+                      ng-model="model.origin_server_location_id"
+                      id="origin_server_location_id"
+                      ng-options="obj.id as obj.locationName for obj in locations">
                 <option value="">--- Select Location ---</option>
               </select>
             </div>
           </div>
+          <!--
           <div class="form-group">
             <label for="tolerance"
                    popover-append-to-body="{{true}}"
@@ -126,18 +128,18 @@
                      placeholder="Time in milliseconds">
             </div>
           </div>
+          -->
 
           <hr>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <button class="btn btn-success"
-                      ng-disabled="_loading"
-                      ng-click="createDomain(model)">
+                      ng-disabled="_loading">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
-                Create domain
+                Create Domain
               </button>
-              <a ui-sref="{{state}}" class="btn btn-default">
+              <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp;
                 Cancel
               </a>
