--- a/code/parts/auth/login.html
+++ b/code/parts/auth/login.html
@@ -1,4 +1,4 @@
-<section id="main" class="login-section" style="display: block; background-image: url('{{randomImage}}');">
+<section id="main" class="login-section" style="display: block;" ng-style="randomImageStyle">
   <div class="main_img_container">
 
     <div class="login_box">
