--- a/code/parts/domains/edit.html
+++ b/code/parts/domains/edit.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
-      Edit Domain
+      Edit Domain {{model.domain_name}}
     </h2>
   </div>
 </div>
@@ -14,13 +14,13 @@
         <div class="row">
           <div class="col-md-12">
             <div class="pull-left">
-              <a ui-sref="{{state}}"
+              <a ui-sref="^"
                  ng-disabled="_loading"
                  class="btn btn-default">
                 <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
                 Back To List
               </a>
-              <a ui-sref="index.webApp.domains.advanced({id: params.id})"
+              <a ui-sref="^.advanced({id: params.id})"
                  ng-disabled="_loading"
                  class="btn btn-info">
 
@@ -35,22 +35,38 @@
       <div class="panel-body">
         <form class="form-horizontal">
           <div class="form-group">
-            <label for="name"
+            <label for="domain_name"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
-                   >Domain name</label>
+                   >Domain Name</label>
 
             <div class="col-sm-10">
               <input type="text"
                      class="form-control"
                      disabled
-                     ng-model="model.name"
-                     id="name"
-                     placeholder="Domain name">
+                     autofocus
+                     ng-model="model.domain_name"
+                     id="domain_name"
+                     placeholder="Domain Name">
             </div>
           </div>
-          <div class="form-group" ng-if="auth.isReseller()">
-            <label for="companyId"
+          <div class="form-group">
+            <label for="cname"
+                   class="col-sm-2 control-label"
+                   popover-trigger="mouseenter"
+                   >Domain CNAME</label>
+
+            <div class="col-sm-10">
+              <input type="text"
+                     class="form-control"
+                     disabled
+                     ng-model="model.cname"
+                     id="cname"
+                     placeholder="Domain CNAME">
+            </div>
+          </div>
+          <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()">
+            <label for="account_id"
                    popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
@@ -59,8 +75,8 @@
             <div class="col-sm-10">
               <select class="form-control"
                       ng-disabled="_loading"
-                      ng-model="model.companyId"
-                      id="companyId"
+                      ng-model="model.account_id"
+                      id="account_id"
                       ng-options="obj.id as obj.companyName for obj in companies">
                 <option value="">--- Select Company ---</option>
               </select>
@@ -79,7 +95,7 @@
                      ng-disabled="_loading"
                      ng-model="model.origin_server"
                      id="origin_server"
-                     placeholder="Origin Server name">
+                     placeholder="Origin Server Name">
             </div>
           </div>
           <div class="form-group">
@@ -99,7 +115,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="origin_server_location"
+            <label for="origin_server_location_id"
                    popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
@@ -108,13 +124,14 @@
             <div class="col-sm-10">
               <select class="form-control"
                       ng-disabled="_loading"
-                      ng-model="model.origin_server_location"
-                      id="origin_server_location"
-                      ng-options="obj.locationName as obj.locationName for obj in locations">
+                      ng-model="model.origin_server_location_id"
+                      id="origin_server_location_id"
+                      ng-options="obj.id as obj.locationName for obj in locations">
                 <option value="">--- Select Location ---</option>
               </select>
             </div>
           </div>
+          <!--
           <div class="form-group">
             <label for="tolerance"
                    popover-append-to-body="{{true}}"
@@ -131,10 +148,17 @@
                      placeholder="Time in milliseconds">
             </div>
           </div>
-
+          -->
           <hr>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
+              <button class="btn btn-info"
+                      ng-disabled="_loading"
+                      ng-click="validateDomain(model)">
+                <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
+                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
+                Validate Domain
+              </button>
               <button class="btn btn-success"
                       ng-disabled="_loading"
                       ng-click="updateDomain(model)">
@@ -142,7 +166,14 @@
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
                 Update Domain
               </button>
-              <a ui-sref="{{state}}" class="btn btn-default">
+              <button class="btn btn-success"
+                      ng-disabled="_loading"
+                      ng-click="publishDomain(model)">
+                <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
+                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
+                Publish Domain
+              </button>
+              <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp;
                 Cancel
               </a>
