--- a/code/parts/domains/configure_advanced.html
+++ b/code/parts/domains/configure_advanced.html
@@ -44,7 +44,7 @@
                      ng-model="obj.data"
                      options="obj.options"
                      ng-jsoneditor
-                     style="height: 550px"></div>
+                     style="height: 550px; padding-left: 0;"></div>
 
                 <div class="col-sm-12" style="margin-top: 15px">
                   <button class="btn btn-info"
