--- a/code/parts/menu/mobile-analitycs-side.html
+++ b/code/parts/menu/mobile-analitycs-side.html
@@ -6,6 +6,10 @@
   <i class="glyphicon glyphicon-stats"></i>
   Top Reports
 </a>
+<a ui-sref-active="active" ui-sref="index.mobile.objects" class="side-menu-item">
+  <i class="glyphicon glyphicon-stats"></i>
+  Top Objects
+</a>
 <a ui-sref-active="active" ui-sref="index.mobile.distributions" class="side-menu-item">
   <i class="glyphicon glyphicon-stats"></i>
   Traffic Distributions
