--- a/code/dev/parts/reports/mobile-top-objects.html
+++ b/code/dev/parts/reports/mobile-top-objects.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <h2>Mobile Top Objects Reports</h2>
+      <h2>Top Objects Reports</h2>
     </div>
   </div>
 
